--- a/thesis_master.tex
+++ b/thesis_master.tex
@@ -162,12 +162,12 @@ Lastly, I map out the remaining projects for the rest of my PhD. My goal is to t
 \pagenumbering{arabic} % Switch to normal numbers
 
 % CONTENT
-\input{Chapters/01_introduction.tex}
-\input{Chapters/02_methods.tex}
-\input{Chapters/03_cryptic_exons.tex}
-\input{Chapters/04_fus_mice.tex}
+%\input{Chapters/01_introduction.tex}
+%\input{Chapters/02_methods.tex}
+%\input{Chapters/03_cryptic_exons.tex}
+%\input{Chapters/04_fus_mice.tex}
 \input{Chapters/05_tdp_mice.tex}
-\input{Chapters/discussion.tex}
+%\input{Chapters/discussion.tex}
 
 % ACKNOWLEGEMENTS
 \clearpage
