FUS meta chapter added

--- a/Bibliography/thesis_references.bib
+++ b/Bibliography/thesis_references.bib
@@ -526,7 +526,7 @@ year = {2016}
 	volume = {2011},
 	year = {2011}
 }
-@article{Hicks2000,
+000,
 	abstract = {The gene FUS (also known as TLS (for translocated in liposarcoma) and hnRNP P2) is translocated with the gene encoding the transcription factor ERG-1 in human myeloid leukaemias. Although the functions of wild-type FUS are unknown, the protein contains an RNA-recognition motif and is a component of nuclear riboprotein complexes. FUS resembles a transcription factor in that it binds DNA, contributes a transcriptional activation domain to the FUS-ERG oncoprotein and interacts with several transcription factors in vitro. To better understand FUS function in vivo, we examined the consequences of disrupting Fus in mice. Our results indicate that Fus is essential for viability of neonatal animals, influences lymphocyte development in a non-cell-intrinsic manner, has an intrinsic role in the proliferative responses of B cells to specific mitogenic stimuli and is required for the maintenance of genomic stability. The involvement of a nuclear riboprotein in these processes in vivo indicates that Fus is important in genome maintenance.},
 	author = {Hicks, G G and Singh, N and Nashabi, a and Mai, S and Bozek, G and Klewes, L and Arapovic, D and White, E K and Koury, M J and Oltz, E M and {Van Kaer}, L and Ruley, H E},
 	doi = {10.1038/72842},
@@ -698,6 +698,24 @@ year = {2016}
 	title = {{Integrative genomics viewer.}},
 	volume = {29},
 	year = {2011}
+}
+@article{Conte2012,
+	abstract = {Some FUS mutations have been observed in patients with the juvenile form of Amyotrophic Lateral Sclerosis starting before 25. years. We report an 11-year-old girl affected by sporadic juvenile ALS with a rapid course resulting in tracheostomy after 14. months from the onset. Sequencing FUS gene revealed a de novo P525L mutation. Our findings, together with literature data, indicate that this mutation is consistently associated with a specific phenotype characterized by juvenile onset, severe course and high proportion of de novo mutations in sporadic cases. {\textcopyright} 2011 Elsevier B.V.},
+	author = {Conte, Amelia and Lattante, Serena and Zollino, Marcella and Marangi, Giuseppe and Luigetti, Marco and {Del Grande}, Alessandra and Servidei, Serenella and Trombetta, Federica and Sabatelli, Mario},
+	doi = {10.1016/j.nmd.2011.08.003},
+	file = {:Users/Jack/Library/Application Support/Mendeley Desktop/Downloaded/Conte et al. - 2012 - P525L FUS mutation is consistently associated with a severe form of juvenile Amyotrophic Lateral Sclerosis.pdf:pdf},
+	isbn = {1873-2364 (Electronic)$\backslash$r0960-8966 (Linking)},
+	issn = {09608966},
+	journal = {Neuromuscular Disorders},
+	keywords = {FUS gene,Juvenile ALS,Prognosis},
+	number = {1},
+	pages = {73--75},
+	pmid = {21907581},
+	publisher = {Elsevier B.V.},
+	title = {{P525L FUS mutation is consistently associated with a severe form of juvenile Amyotrophic Lateral Sclerosis}},
+	url = {http://dx.doi.org/10.1016/j.nmd.2011.08.003},
+	volume = {22},
+	year = {2012}
 }
 @article{Brown2016,
 	author = {Brown, Andrew Anand and Vi{\~{n}}uela, Ana and Delaneau, Olivier and Spector, Timothy and Small, Kerrin and Dermitzakis, Emmanouil},
@@ -2735,6 +2753,19 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	volume = {33},
 	year = {2005}
 }
+@article{Capauto2018,
+	abstract = {{\textcopyright} 2018 The Author(s) Mutations in fused in sarcoma (FUS) cause amyotrophic lateral sclerosis (ALS). FUS is a multifunctional protein involved in the biogenesis and activity of several types of RNAs, and its role in the pathogenesis of ALS may involve both direct effects of disease-associated mutations through gain- and loss-of-function mechanisms and indirect effects due to the cross talk between different classes of FUS-dependent RNAs. To explore how FUS mutations impinge on motor neuron-specific RNA-based circuitries, we performed transcriptome profiling of small and long RNAs of motor neurons (MNs) derived from mouse embryonic stem cells carrying a FUS-P517L knock-in mutation, which is equivalent to human FUS-P525L, associated with a severe and juvenile-onset form of ALS. Combining ontological, predictive and molecular analyses, we found an inverse correlation between several classes of deregulated miRNAs and their corresponding mRNA targets in both homozygous and heterozygous P517L MNs. We validated a circuitry in which the upregulation of miR-409-3p and miR-495-3p, belonging to a brain-specific miRNA subcluster implicated in several neurodevelopmental disorders, produced the downregulation of Gria2, a subunit of the glutamate $\alpha$‐amino‐3‐hydroxy‐5‐methyl-4-isoxazole propionic acid (AMPA) receptor with a significant role in excitatory neurotransmission. Moreover, we found that FUS was involved in mediating such miRNA repression. Gria2 alteration has been proposed to be implicated in MN degeneration, through disturbance of Ca 2+ homeostasis, which triggers a cascade of damaging “excitotoxic” events. The molecular cross talk identified highlights a role for FUS in excitotoxicity and in miRNA-dependent regulation of Gria2. This circuitry also proved to be deregulated in heterozygosity, which matches the human condition perfectly.},
+	author = {Capauto, Davide and Colantoni, Alessio and Lu, Lei and Santini, Tiziana and Peruzzi, Giovanna and Biscarini, Silvia and Morlando, Mariangela and Shneider, Neil A. and Caffarelli, Elisa and Laneve, Pietro and Bozzoni, Irene},
+	doi = {10.1007/s12035-018-0884-4},
+	file = {:Users/Jack/Downloads/10.1007{\%}2Fs12035-018-0884-4.pdf:pdf},
+	issn = {15591182},
+	journal = {Molecular Neurobiology},
+	keywords = {ALS,Excitotoxicity,FUS,Gria2,MicroRNAs,Motor neurons,RNA binding proteins},
+	pages = {1--17},
+	publisher = {Molecular Neurobiology},
+	title = {{A Regulatory Circuitry Between Gria2, miR-409, and miR-495 Is Affected by ALS FUS Mutation in ESC-Derived Motor Neurons}},
+	year = {2018}
+}
 @article{Lukavsky2013,
 	author = {Lukavsky, Peter J and Daujotyte, Dalia and Tollervey, James R and Ule, Jernej and Stuani, Cristiana and Buratti, Emanuele and Baralle, Francisco E and Damberger, Fred F and Allain, Fr{\'{e}}d{\'{e}}ric H-T},
 	doi = {10.1038/nsmb.2698},
@@ -2762,6 +2793,21 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	title = {{Widespread intron retention in mammals functionally tunes transcriptomes}},
 	volume = {24},
 	year = {2014}
+}
+@article{Devoy2017,
+	abstract = {Mutations in FUS are causative for amyotrophic lateral sclerosis with a dominant mode of inheritance. In trying to model FUS-amyotrophic lateral sclerosis (ALS) in mouse it is clear that FUS is dosage-sensitive and effects arise from overexpression per se in transgenic strains. Novel models are required that maintain physiological levels of FUS expression and that recapitulate the human disease—with progressive loss of motor neurons in heterozygous animals. Here, we describe a new humanized FUS-ALS mouse with a frameshift mutation, which fulfils both criteria: the FUS Delta14 mouse. Heterozygous animals express mutant humanized FUS protein at physiological levels and have adult onset progressive motor neuron loss and denervation of neuromuscular junctions. Additionally, we generated a novel antibody to the unique human frameshift peptide epitope, allowing specific identification of mutant FUS only. Using our new FUSDelta14 ALS mouse-antibody system we show that neurodegeneration occurs in the absence of FUS protein aggregation. FUS mislocalization increases as disease progresses, and mutant FUS accumulates at the rough endoplasmic reticulum. Further, transcriptomic analyses show progressive changes in ribosomal protein levels and mitochondrial function as early disease stages are initiated. Thus, our new physiological mouse model has provided novel insight into the early pathogenesis of FUS-ALS.},
+	author = {Devoy, Anny and Kalmar, Bernadett and Stewart, Michelle and Park, Heesoon and Burke, Beverley and Noy, Suzanna J. and Redhead, Yushi and Humphrey, Jack and Lo, Kitty and Jaeger, Julian and {Mejia Maza}, Alan and Sivakumar, Prasanth and Bertolin, Cinzia and Soraru, Gianni and Plagnol, Vincent and Greensmith, Linda and {Acevedo Arozena}, Abraham and Isaacs, Adrian M. and Davies, Benjamin and Fratta, Pietro and Fisher, Elizabeth M.C.},
+	doi = {10.1093/brain/awx248},
+	file = {:Users/Jack/Downloads/awx248 (1).pdf:pdf},
+	issn = {14602156},
+	journal = {Brain},
+	keywords = {ALS,Delta14,FUS,humanization,mouse},
+	number = {11},
+	pages = {2797--2805},
+	pmid = {29053787},
+	title = {{Humanized mutant FUS drives progressive motor neuron degeneration without aggregation in 'FUSDelta14' knockin mice}},
+	volume = {140},
+	year = {2017}
 }
 @article{Mizielinska2014,
 	abstract = {An expanded GGGGCC repeat in C9orf72 is the most common genetic cause of frontotemporal dementia and amyotrophic lateral sclerosis. A fundamental question is whether toxicity is driven by the repeat RNA itself and/or by dipeptide repeat proteins generated by repeat-associated, non-ATG translation. To address this question, we developed in vitro and in vivo models to dissect repeat RNA and dipeptide repeat protein toxicity. Expression of pure repeats, but not stop codon-interrupted "RNA-only" repeats in Drosophila caused adult-onset neurodegeneration. Thus, expanded repeats promoted neurodegeneration through dipeptide repeat proteins. Expression of individual dipeptide repeat proteins with a non-GGGGCC RNA sequence revealed that both poly-(glycine-arginine) and poly-(proline-arginine) proteins caused neurodegeneration. These findings are consistent with a dual toxicity mechanism, whereby both arginine-rich proteins and repeat RNA contribute to C9orf72-mediated neurodegeneration.},
@@ -3849,6 +3895,21 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	NOOPurl = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=2872874{\&}tool=pmcentrez{\&}rendertype=abstract},
 	volume = {11},
 	year = {2010}
+}
+@article{Hicks2000,
+	abstract = {The gene FUS (also known as TLS (for translocated in liposarcoma) and hnRNP P2) is translocated with the gene encoding the transcription factor ERG-1 in human myeloid leukaemias. Although the functions of wild-type FUS are unknown, the protein contains an RNA-recognition motif and is a component of nuclear riboprotein complexes. FUS resembles a transcription factor in that it binds DNA, contributes a transcriptional activation domain to the FUS-ERG oncoprotein and interacts with several transcription factors in vitro. To better understand FUS function in vivo, we examined the consequences of disrupting Fus in mice. Our results indicate that Fus is essential for viability of neonatal animals, influences lymphocyte development in a non-cell-intrinsic manner, has an intrinsic role in the proliferative responses of B cells to specific mitogenic stimuli and is required for the maintenance of genomic stability. The involvement of a nuclear riboprotein in these processes in vivo indicates that Fus is important in genome maintenance.},
+	author = {Hicks, G G and Singh, N and Nashabi, a and Mai, S and Bozek, G and Klewes, L and Arapovic, D and White, E K and Koury, M J and Oltz, E M and {Van Kaer}, L and Ruley, H E},
+	doi = {10.1038/72842},
+	file = {:Users/Jack/Downloads/ng0200{\_}175.pdf:pdf},
+	isbn = {1061-4036 (Print)$\backslash$n1061-4036 (Linking)},
+	issn = {1061-4036},
+	journal = {Nature genetics},
+	number = {2},
+	pages = {175--9},
+	pmid = {10655065},
+	title = {{Fus deficiency in mice results in defective B-lymphocyte development and activation, high levels of chromosomal instability and perinatal death.}},
+	volume = {24},
+	year = {2000}
 }
 @article{Zhou2013,
 	annote = {autoregulation of FUS. might be incorrect},
