--- a/thesis_master.tex
+++ b/thesis_master.tex
@@ -55,7 +55,7 @@
 \begin{document}
 \setcounter{page}{7}
 
-\input{Chapters/00_frontmatter.tex}
+%\input{Chapters/00_frontmatter.tex}
 
 \pagenumbering{arabic} % Switch to normal numbers
 
@@ -65,6 +65,7 @@
 %\input{Chapters/03_cryptic_exons.tex}
 %\input{Chapters/04_fus_mice.tex}
 %\input{Chapters/05_tdp_mice.tex}
+\input{Chapters/06_fus_meta.tex}
 %\input{Chapters/discussion.tex}
 
 % ACKNOWLEGEMENTS
@@ -72,14 +73,14 @@
 %\input{Chapters/99_acknowledgements.tex}
 
 
+% BIBLIOGRAPHY
 
-%\bibliographystyle{nar}
 \bibliographystyle{Bibliography/plainnat_edit}
 \bibliography{Bibliography/thesis_references} %.bib files
 
 % APPENDICES!!!
 
-\input{Chapters/appendices.tex}
+%\input{Chapters/appendices.tex}
 
 \cleardoublepage
 \end{document}
