added new figures, worked on tdp mouse discussion

--- a/Bibliography/thesis_references.bib
+++ b/Bibliography/thesis_references.bib
@@ -2623,6 +2623,57 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	title = {{Toxic gain of function from mutant FUS protein is crucial to trigger cell autonomous motor neuron loss}},
 	year = {2016}
 }
+
+@article{Wollerton2004,
+	abstract = {Polypyrimdine tract binding protein (PTB) is a regulator of alternative splicing, mRNA 3′ end formation, mRNA stability and localization, and IRES-mediated translation. Transient overexpression of PTB can influence alternative splicing, sometimes resulting in nonphysiological splicing patterns. Here, we show that alternative skipping of PTB exon 11 leads to an mRNA that is removed by NMD and that this pathway consumes at least 20{\%} of the PTB mRNA in HeLa cells. We also show that exon 11 skipping is itself promoted by PTB in a negative feedback loop. This autoregulation may serve both to prevent disruptively high levels of PTB expression and to restore nuclear levels when PTB is mobilized to the cytoplasm. Our findings suggest that alternative splicing can act not only to generate protein isoform diversity but also to quantitatively control gene expression and complement recent bioinformatic analyses, indicating a high prevalence of human alternative splicing leading to NMD.},
+	author = {Wollerton, Matthew C. and Gooding, Clare and Wagner, Eric J. and Garcia-Blanco, Mariano A. and Smith, Christopher W.J.},
+	doi = {10.1016/S1097-2765(03)00502-1},
+	file = {:Users/jack/Downloads/Papers/PIIS1097276503005021.pdf:pdf},
+	isbn = {1097-2765 (Print)$\backslash$n1097-2765 (Linking)},
+	issn = {10972765},
+	journal = {Molecular Cell},
+	number = {1},
+	pages = {91--100},
+	pmid = {14731397},
+	title = {{Autoregulation of Polypyrimidine Tract Binding Protein by Alternative Splicing Leading to Nonsense-Mediated Decay}},
+	volume = {13},
+	year = {2004}
+}
+
+@article{White2018,
+	abstract = {A myotrophic lateral sclerosis (ALS) and frontotemporal dementia (FTD) are destructive neurodegenerative diseases that exist on a clinicopathological spectrum (ALS-FTD) 1 . ALS is characterized by motor impairment and FTD by executive dysfunction, language impairment and behavioral changes. Nearly all cases of ALS, half of FTD cases, and most hereditary forms of ALS and FTD are characterized by cytoplasmic mislocalization and aggregation of TDP-43 2,3 . The identification of mutations in the gene encoding TDP-43 (TARDBP) as a cause of ALS and FTD confirmed that TDP-43 plays a mechanistic role in neurodegenera-tion 4,5 . This role remains undefined. TDP-43 is a conserved RNA-binding protein with critical roles in splicing in the nervous system 6 . TDP-43 also demonstrates tight autoregulation by binding to its transcript, triggering alternative splicing of intron 7 in the TARDBP 3′ untranslated region (UTR) and destruction of its mRNA 7 . Experimentally increasing and decreasing TDP-43 levels both cause neuronal loss, but whether human neurodegeneration is caused by a gain or loss of TDP-43 function remains unclear. Modeling of mutant TDP-43 in vivo has relied on variable degrees of transgenic overexpression of TDP-43 to replicate pathological changes seen in postmortem human tissues 8 . However, TDP-43 transgenic mouse models have demonstrated that TDP-43 aggregation is not necessary to cause neurodegenera-tion 9 , and whether TDP-43 aggregation is causally linked to disease onset is unclear. A caveat of transgenic TDP-43 mouse models is that pheno-types may partly be artifacts of overexpression. Furthermore, the cell-type-specific expression of single TDP-43 splice forms in trans-genic models using neuronal promoters and temporally triggered expression of transgenes in adulthood do not reflect the ubiquitous expression and alternative splicing of Tardbp, including that occur-ring during embryonic development 10 . To unravel the role of mutant TDP-43 in the disease pathogenesis, we created a knock-in mouse harboring only a human-equivalent point mutation in the endog-enous mouse Tardbp gene. This model replicates the human mutant state as closely as possible, retaining the endogenous gene structure Amyotrophic lateral sclerosis–frontotemporal dementia (ALS-FTD) constitutes a devastating disease spectrum character-ized by 43-kDa TAR DNA-binding protein (TDP-43) pathology. Understanding how TDP-43 contributes to neurodegeneration will help direct therapeutic efforts. Here we have created a TDP-43 knock-in mouse with a human-equivalent mutation in the endogenous mouse Tardbp gene. TDP-43 Q331K},
+	author = {White, Matthew A and Kim, Eosu and Duffy, Amanda and Adalbert, Robert and Phillips, Benjamin U and Peters, Owen M and Stephenson, Jodie and Yang, Sujeong and Massenzio, Francesca and Lin, Ziqiang and Andrews, Simon and Segonds-Pichon, Anne and Metterville, Jake and Saksida, Lisa M and Mead, Richard and Ribchester, Richard R and Barhomi, Youssef and Serre, Thomas and Coleman, Michael P and Fallon, Justin and Bussey, Timothy J and {Brown Jr}, Robert H and Sreedharan, Jemeen},
+	doi = {10.1038/s41593-018-0113-5},
+	file = {:Users/jack/Library/Application Support/Mendeley Desktop/Downloaded/Van Geest et al. - 2018 - TDP-43 gains function due to perturbed autoregulation in a Tardbp knock-in mouse model of ALS-FTD(2).pdf:pdf},
+	issn = {1546-1726},
+	journal = {Nature Neuroscience},
+	pmid = {29556029},
+	publisher = {Springer US},
+	title = {{TDP-43 gains function due to perturbed autoregulation in a Tardbp knock-in mouse model of ALS-FTD}},
+	url = {https://www.nature.com/articles/s41593-018-0113-5.pdf},
+	year = {2018}
+}
+
+@article{Gueroussov2017,
+	abstract = {Alternative splicing (AS) patterns have diverged rapidly during vertebrate evolution, yet the functions of most species- and lineage-specific splicing events are not known. We observe that mammalian-specific AS events are enriched in transcript sequences encoding intrinsically disordered regions (IDRs) of proteins, in particular those containing glycine/tyrosine repeats that mediate formation of higher-order protein assemblies implicated in gene regulation and human disease. These evolutionary changes impact nearly all members of the hnRNP A and D families of RNA binding proteins. Regulation of these events requires formation of unusual, long-range mammalian-specific RNA duplexes. Differential inclusion of the alternative exons controls the formation of tyrosine-dependent multivalent hnRNP assemblies that, in turn, function to globally regulate splicing. Together, our results demonstrate that AS control of IDR-mediated interactions between hnRNPs represents an important and recurring mechanism underlying splicing regulation. Furthermore, this mechanism has expanded the regulatory capacity of mammalian cells.},
+	author = {Gueroussov, Serge and Weatheritt, Robert J. and O'Hanlon, Dave and Lin, Zhen Yuan and Narula, Ashrut and Gingras, Anne Claude and Blencowe, Benjamin J.},
+	doi = {10.1016/j.cell.2017.06.037},
+	file = {:Users/jack/Downloads/Papers/PIIS0092867417307560.pdf:pdf},
+	isbn = {1097-4172 (Electronic)
+	0092-8674 (Linking)},
+	issn = {10974172},
+	journal = {Cell},
+	keywords = {alternative splicing,evolution,hnRNP,multivalent assemblies,phase separation,protein disorder},
+	number = {2},
+	pages = {324--339.e23},
+	pmid = {28709000},
+	publisher = {Elsevier Inc.},
+	title = {{Regulatory Expansion in Mammals of Multivalent hnRNP Assemblies that Globally Control Alternative Splicing}},
+	url = {http://dx.doi.org/10.1016/j.cell.2017.06.037},
+	volume = {170},
+	year = {2017}
+}
+
 @article{Ju2013,
 	author = {Ju, W. and Greene, C. S. and Eichinger, F. and Nair, V. and Hodgin, J. B. and Bitzer, M. and Lee, Y.-s. and Zhu, Q. and Kehata, M. and Li, M. and Jiang, S. and Rastaldi, M. P. and Cohen, C. D. and Troyanskaya, O. G. and Kretzler, M.},
 	doi = {10.1101/gr.155697.113},
@@ -2992,7 +3043,7 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	volume = {107},
 	year = {2010}
 }
-@article{Mohagheghi2015,
+@article{Mohagheghi2016,
 	abstract = {The aggregation and mislocalization of RNA-binding proteins leads to the aberrant regulation of RNA metabolism and is a key feature of many neurodegenerative diseases, including amyotrophic lateral sclerosis and frontotemporal dementia. However, the pathological consequences of abnormal deposition of TDP-43 and other RNA-binding proteins remain unclear, as the specific molecular events that drive neurodegeneration have been difficult to identify and continue to be elusive. Here we provide novel insight into the complexity of the RNA-binding protein network by demonstrating that the inclusion of exon 17b in the SORT1 mRNA, a pathologically-relevant splicing event known to be regulated by TDP-43, is also considerably affected by additional RNA-binding proteins, such as hnRNP L, PTB/nPTB and hnRNP A1/A2. Most importantly, the expression of hnRNP A1/A2 and PTB/nPTB is significantly altered in patients with frontotemporal dementia with TDP-43 positive inclusions (FTLD-TDP), indicating that perturbations in RNA metabolism and processing in FTLD-TDP is not exclusively driven by a loss of TDP-43 function. These results also suggest that a comprehensive assessment of the RNA-binding protein network will dramatically advance our current understanding of the role of TDP-43 in disease pathogenesis, as well as enhance both diagnostic and therapeutic capabilities.},
 	annote = {READ ME},
 	author = {Mohagheghi, Fatemeh and Prudencio, Mercedes and Stuani, Cristiana and Cook, Casey and Jansen-West, Karen and Dickson, Dennis W and Petrucelli, Leonard and Buratti, Emanuele},
@@ -3001,12 +3052,13 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	isbn = {2059755689},
 	issn = {1460-2083},
 	journal = {Human molecular genetics},
-	number = {949},
-	pages = {1--38},
+	number = {3},
+	pages = {534--545},
 	pmid = {26614389},
 	title = {{TDP-43 functions within a network of hnRNP proteins to inhibit the production of a truncated human SORT1 receptor.}},
 	NOOPurl = {http://www.ncbi.nlm.nih.gov/pubmed/26614389},
-	year = {2015}
+	volume = {25},
+	year = {2016}
 }
 @article{Kremer2016,
 	abstract = {Across a large variety of Mendelian disorders, 50 to 75{\%} of undiagnosed patients do not receive a genetic diagnosis by whole exome sequencing indicative of underlying regulatory variants. In contrast, whole genome sequencing allows the discovery of all genetic variants, but their significant number, coupled with a poor understanding of the non-coding genome, makes their prioritization challenging. Here, we demonstrate the power of directly sequencing transcriptomes by providing a genetic diagnosis for 11{\%} (5 of 47) of unsolved mitochondrial disease patients and strong candidates for other patients. We found a median of 1 aberrantly expressed gene, 5 aberrant splicing events, and 6 mono-allelically expressed rare variants in patient-derived fibroblasts and established disease-causing roles for each kind. Private exons often arose from sites that are weakly spliced in other individuals, providing an important clue for future variant prioritization. One such intronic exon-creating variant was found in three unrelated families in the complex I assembly factor TIMMDC1, which we consequently established as a novel disease-associated gene. In conclusion, our study expands the diagnostic tools for detecting non-exonic variants of Mendelian disorders and provides examples of intronic loss-of-function variants with pathological relevance.},
