--- a/thesis_master.tex
+++ b/thesis_master.tex
@@ -31,7 +31,7 @@
 \usepackage{emptypage} % all cleardoublepage are without page numbers
 \lhead{} 
 \usepackage[round]{natbib}
-
+\usepackage{pdfpages} % for adding pdfs in to the appendices
 \usepackage{pdflscape} % for landscape pages
 \usepackage{sidecap} % for side captions
 
@@ -64,8 +64,8 @@
 %\input{Chapters/02_methods.tex}
 %\input{Chapters/03_cryptic_exons.tex}
 %\input{Chapters/04_fus_mice.tex}
-%\input{Chapters/05_tdp_mice.tex}
-\input{Chapters/06_fus_meta.tex}
+\input{Chapters/05_tdp_mice.tex}
+%\input{Chapters/06_fus_meta.tex}
 %\input{Chapters/discussion.tex}
 
 % ACKNOWLEGEMENTS
