--- a/thesis_full.tex
+++ b/thesis_full.tex
@@ -55,22 +55,22 @@
 \begin{document}
 \setcounter{page}{7}
 
-%\input{Chapters/00_frontmatter.tex}
+\input{Chapters/00_frontmatter.tex}
 
 \pagenumbering{arabic} % Switch to normal numbers
 
 % CONTENT
-%\input{Chapters/01_introduction.tex}
+\input{Chapters/01_introduction.tex}
 \input{Chapters/02_methods.tex}
-%\input{Chapters/03_cryptic_exons.tex}
-%\input{Chapters/04_fus_mice.tex}
+\input{Chapters/03_cryptic_exons.tex}
+\input{Chapters/04_fus_mice.tex}
 \input{Chapters/05_tdp_mice.tex}
 %\input{Chapters/06_fus_meta.tex}
 %\input{Chapters/discussion.tex}
 
 % ACKNOWLEGEMENTS
 \clearpage
-%\input{Chapters/99_acknowledgements.tex}
+\input{Chapters/99_acknowledgements.tex}
 
 
 % BIBLIOGRAPHY
